--- a/src/app/components/partners/partner-profile/partner-profile.component.scss
+++ b/src/app/components/partners/partner-profile/partner-profile.component.scss
@@ -82,6 +82,83 @@
             }
         }
     }
+
+}
+
+.toggle-warehouse-wrapper {
+    position: fixed;
+    bottom: 2rem;
+    right: 1rem;
+    width: 40px;
+    height: 40px;
+    background-color: var(--color-primary);
+    z-index: 999;
+    // display: none;
+    font-size: 30px;
+    border-radius: 50%;
+    padding-top: 3.5px;
+    padding-left: 5px;
+    color: var(--color-light);
+
+    .warehouse-menu {
+        position: absolute;
+        right: calc(100% + 1rem);
+        bottom: 50%;
+        // transform: translateY(50%);
+        display: flex;
+        flex-direction: column;
+        // row-gap: .25rem;
+        min-width: 200px;
+        // background-color: var(--color-light);
+        background-color: var(--color-warning);
+        padding: .25rem 1rem;
+        border-radius: .35rem;
+
+        div {
+            a {
+                font-size: 16px;
+                text-decoration: none;
+                color: var(--color-light);
+                line-height: 2.5em;
+                position: relative;
+            }
+
+            a::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 1.5px;
+                background-color: var(--color-light);
+                bottom: -1px;
+                left: 0;
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform 0.3s ease;
+            }
+
+            a:hover::after {
+                transform: scaleX(1);
+            }
+        }
+
+        .close-warehouse {
+            position: absolute;
+            top: -.4rem;
+            right: -.3rem;
+            font-size: 22px;
+            width: 22px;
+            height: 22px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            background-color: var(--color-warning);
+            text-decoration: none;
+            color: var(--color-light);
+            padding-top: 1px;
+        }
+    }
+
 }
 
 @media(max-width:1200px) {
